--- a/basic.css
+++ b/basic.css
@@ -155,6 +155,9 @@
 #menu.no-animation {
     animation: none !important;
 }
+.menu-button.active .menu-button-bar {
+    background-color: var(--font-color);
+}
 .menu-button.active .menu-button-bar:nth-child(1) {
     animation: top-bar 0.3s forwards;
 }
@@ -179,6 +182,7 @@
 #menu:not(.active) {
     animation: menu-reserve 0.5s forwards;
 }
+
 :root {
     --theme-color: #ff3300;
     --font-color: #24292e;
@@ -192,7 +196,9 @@
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 400;
+    font-size: 16px;
     color: var(--font-color);
+    touch-action: manipulation;
 }
 body {
     background-color: #f7f7f7;
@@ -231,7 +237,7 @@ b {
     display: block;
     width: 18px;
     height: 2px;
-    background-color: var(--font-color);
+    background-color: var(--theme-color);
     opacity: 1;
     border-radius: 5px;
     margin: 0 0 3px 0;
@@ -325,7 +331,7 @@ button {
     height: 40px;
     width: 90px;
     padding: 7px;
-    margin: 10px 10px;
+    margin: 0px 10px;
     border-radius: 10px;
     font-size: 16px;
     font-weight: 600;
@@ -348,6 +354,22 @@ button.hollow:active {
     color: #0b60e3;
     border: #0060e3 1px solid;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 2px inset;
+}
+button.solid.warn {
+    background-color: #ee0000;
+    color: #ffffff;
+    border: none;
+}
+button.solid.warn:active {
+    background-color: #cc0000;
+}
+button.hollow.warn {
+    color: #ff0000;
+    border: #ff0000 1px solid;
+}
+button.hollow.warn:active {
+    color: #cc0000;
+    border: #cc0000 1px solid;
 }
 .bottom {
     display: flex;
@@ -488,7 +510,7 @@ code {
     display: inline;
     font-family: "JetBrainsMono", monospace;
     font-weight: normal;
-    height: 16px;
+    height: 19px;
     padding: 0.2em 0.4em;
     margin: 0;
     font-size: 85%;
@@ -497,6 +519,8 @@ code {
 }
 i.bx {
     font-size: 18px;
+    vertical-align: text-top;
+    line-height: 1;
 }
 /* 适配深色模式 */
 @media (prefers-color-scheme: dark) {
@@ -521,6 +545,9 @@ i.bx {
     }
     .header {
         background-color: #181818cc;
+    }
+    .menu-button-bar {
+        background-color: var(--font-color);
     }
     #menu {
         background-color: #181818cc;
